United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7050280 assert(u->as_Unlock()->is_eliminated()) failed: sanity
7050280 : assert(u->as_Unlock()->is_eliminated()) failed: sanity

Details
Type:
Bug
Submit Date:
2011-06-01
Status:
Resolved
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2011-06-17
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs21
Fixed Versions:
hs21

Related Reports
Backport:
Backport:
Backport:

Sub Tasks

Description
Application crashes on startup (HS 21 b14, JDK 7 b144, fastdebug, -d64 -server -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSClassUnloadingEnabled -XX:+AggressiveOpts -XX:CompileThreshold=100 -XX:+UseCodeCacheFlushing):

# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/export/HUDSON/workspace/jdk7-2-build-solaris-amd64-product/jdk7/hotspot/src/share/vm/opto/macro.cpp:1737), pid=23430, tid=32
#  assert(u->as_Unlock()->is_eliminated()) failed: sanity
#
# JRE version: 7.0-b144
# Java VM: Java HotSpot(TM) 64-Bit Server VM (21.0-b14-fastdebug mixed mode solaris-amd64 )

Stack: [0xfffffd7fc683b000,0xfffffd7fc693b000],  sp=0xfffffd7fc6931f20,  free space=987k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x2601c2a]  void VMError::report(outputStream*)+0x8c6;;  void VMError::report(outputStream*)+0x8c6
V  [libjvm.so+0x2602d69]  void VMError::report_and_die()+0x4fd;;  void VMError::report_and_die()+0x4fd
V  [libjvm.so+0xe4566f]  void report_vm_error(const char*,int,const char*,const char*)+0x55f;;  void report_vm_error(const char*,int,const char*,const char*)+0x55f
V  [libjvm.so+0x1d10b37]  bool PhaseMacroExpand::eliminate_locking_node(AbstractLockNode*)+0xe33;;  bool PhaseMacroExpand::eliminate_locking_node(AbstractLockNode*)+0xe33
V  [libjvm.so+0x1d1a7bb]  bool PhaseMacroExpand::expand_macro_nodes()+0x133;;  bool PhaseMacroExpand::expand_macro_nodes()+0x133
V  [libjvm.so+0xca69a9]  void Compile::Optimize()+0x1b31;;  void Compile::Optimize()+0x1b31
V  [libjvm.so+0xc9cf9a]  Compile::Compile(ciEnv*,C2Compiler*,ciMethod*,int,bool,bool)+0x14a6;;  Compile::Compile(ciEnv*,C2Compiler*,ciMethod*,int,bool,bool)+0x14a6
V  [libjvm.so+0xa335ff]  void C2Compiler::compile_method(ciEnv*,ciMethod*,int)+0x16b;;  void C2Compiler::compile_method(ciEnv*,ciMethod*,int)+0x16b
V  [libjvm.so+0xcc4b41]  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x1519;;  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x1519
V  [libjvm.so+0xcc29cb]  void CompileBroker::compiler_thread_loop()+0xc8f;;  void CompileBroker::compiler_thread_loop()+0xc8f
V  [libjvm.so+0x24c5e3d]  void JavaThread::thread_main_inner()+0x195;;  void JavaThread::thread_main_inner()+0x195
V  [libjvm.so+0x24c5a8e]  void JavaThread::run()+0x61e;;  void JavaThread::run()+0x61e
V  [libjvm.so+0x2051c62]  java_start+0x6a6;;  java_start+0x6a6
C  [libc.so.1+0x1149d4]  _thrp_setup+0xbc;;  _thrp_setup+0xbc
C  [libc.so.1+0x114ca0]  _lwp_start+0x0;;  _lwp_start+0x0

Current CompileTask:
C2: 109465 5315             com.bea.common.ldap.ParserImpl::loadData (224 bytes)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/642c68c75db9
                                     
2011-06-18
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/293f68bda347
                                     
2011-06-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/293f68bda347
                                     
2011-06-07
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/642c68c75db9
                                     
2011-06-04



Hardware and Software, Engineered to Work Together