7050280: assert(u->as_Unlock()->is_eliminated()) failed: sanity

Mark all associated (same box and obj) lock and unlock nodes for elimination if some of them marked already.

Reviewed-by: iveresov, never